--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Create.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Create.cshtml
@@ -37,7 +37,7 @@
 
 
                     <div class="form-group">
-                        <label class="col-md-2 control-label" for="Imagem">Imagem procedimento <h11>*</h11></label>
+                        <label class="col-md-2 control-label" for="Imagem">Imagem procedimento </label>
                         <div class="col-md-8">
                             <input asp-for="ImgProduto_Proc" class="form-control" type="text" multiple />
                             <span asp-validation-for="ImgProduto_Proc" class="text-danger"></span>
@@ -60,7 +60,7 @@
                         <div class="col-md-8">
                             <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Cadastrar</button>
                             <button id="Cancelar" name="Cancelar" class="btn btn-danger" asp-action="Index" type="Reset">Cancelar</button>
-                            <a class="btn btn-info" asp-action="Index">Voltar Para a Lista de Procedimentos</a>
+                            <a class="btn btn-info" asp-action="Index">Voltar Para a Lista </a>
                         </div>
                     </div>
                 </div>
