--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Convenio/Create.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Convenio/Create.cshtml
@@ -24,51 +24,14 @@
                         <span asp-validation-for="Nome" class="text-danger"></span>
                     </div>
                 </div>
-
-                <div class="form-group">
-                    <label class="col-md-2 control-label" for="Cadastrar Novos Planos"></label>
-
-                    <div class="col-sm-3 my-1">
-                        <label class="sr-only" for="inlineFormInputGroupPlano">Plano</label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text"> </div>
-                            </div>
-                            <input type="text" class="form-control" id="inlineFormInputGroupPlano" placeholder="Plano">
-                        </div>
-                    </div>
-                    <div class="col-auto my-1">
-                        <button type="submit" class="btn btn-primary">Adicionar</button>
-                    </div>
-                </div>
-                    <div class="col-md-8">
-
-                        <div class="row">
-                            <div class="col-4">
-                                <div class="list-group" id="list-tab" role="tablist">
-                                    <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Home</a>
-                                    <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Profile</a>
-                                    <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
-                                    <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
-                                </div>
-                            </div>
-                            <div class="col-8">
-                                <div class="tab-content" id="nav-tabContent">
-                                    <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">...</div>
-                                    <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>
-                                    <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>
-                                    <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+ 
                 </div>
 
                     <div class="form-group">
                         <label class="col-md-2 control-label" for="Cadastrar"></label>
                         <div class="col-md-8">
                             <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Cadastrar</button>
-                            <button id="Cancelar" name="Cancelar" class="btn btn-danger" asp-action="Index" type="Reset">Cancelar e Voltat</button>
+                            <a class="btn btn-info" asp-action="Index">Voltar Para a Lista</a>
                         </div>
                     </div>
                 </div>
