--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Convenio/Edit.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Convenio/Edit.cshtml
@@ -5,77 +5,42 @@
     Layout = "~/Views/Shared/_LayoutConvenio.cshtml";
 }
  
-    <form asp-controller="Convenio" asp-action="Edit" method="post" class="form-horizontal">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <input type="hidden" asp-for="ConvenioId" />
-        <fieldset>
-            <div class="panel panel-primary">
-                <div class="panel-heading">Editar Convenio</div>
+<form asp-controller="Convenio" asp-action="Edit" method="post" class="form-horizontal">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input type="hidden" asp-for="ConvenioId" />
+    <input type="hidden" asp-for="Ativo" />
+    <fieldset>
+        <div class="panel panel-primary">
+            <div class="panel-heading">Editar Convenio</div>
 
-                <div class="panel-body">
-                    <div class="form-group">
-                        <div class="col-md-11 control-label">
-                            <p class="help-block"><h11>*</h11> Campo Obrigatório </p>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-md-2 control-label" for="Nome">Nome do Convenio <h11>*</h11></label>
-                        <div class="col-md-8">
-                            <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md"  type="text">
-                            <span asp-validation-for="Nome" class="text-danger"></span>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-md-2 control-label" for="Nome"></label>
-
-                        <div class="col-md-8">
-                            <div class="input-group">
-                                @await Component.InvokeAsync("PlanoInsert", Model)
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-md-2 control-label" for="Nome"></label>
-                        <div class="col-md-8">
-                            <div class="input-group">
-
-                                @await Component.InvokeAsync("PlanoGrid", Model)
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="form-group">
-                        <label class="col-md-2 control-label" for="Ativo">Status <h11>*</h11></label>
-                        <div class="col-md-4">
-                            <div class="input-group">
-                                <span class="input-group-addon">
-                                    <label class="radio-inline" for="radios-0">
-                                        <input type="radio" asp-for="Ativo" value="0" />
-                                        Desativar
-                                    </label>
-                                    <label class="radio-inline" for="radios-1">
-                                        <input type="radio" asp-for="Ativo" value="1" />
-                                        Ativo
-                                    </label>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-2 control-label" for="Cadastrar"></label>
-                        <div class="col-md-8">
-                            <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Salvar</button>
-                            <a class="btn btn-info" asp-action="Index">Voltar Para a Lista de Convenio</a>
-                        </div>
+            <div class="panel-body">
+                <div class="form-group">
+                    <div class="col-md-11 control-label">
+                        <p class="help-block"><h11>*</h11> Campo Obrigatório </p>
                     </div>
                 </div>
-                        </div>
-</fieldset>
-    </form>
+
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="Nome">Nome do Convenio <h11>*</h11></label>
+                    <div class="col-md-8">
+                        <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md" type="text">
+                        <span asp-validation-for="Nome" class="text-danger"></span>
+                    </div>
+                </div>
+
+
+             
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="Cadastrar"></label>
+                    <div class="col-md-8">
+                        <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Salvar</button>
+                        <a class="btn btn-info" asp-action="Index">Voltar Para a Lista</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </fieldset>
+</form>
 
 
 
