--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Plano/Create.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Plano/Create.cshtml
@@ -1,40 +1,46 @@
 ﻿@model api.portal.jenn.DTO.Plano
 
-        <form asp-controller="Plano" asp-action="Create" method="post" class="form-horizontal">
-            <fieldset>
-                <div class="panel panel-primary">
-                    <div class="panel-heading">Cadastro de Plano para o Convenio</div>
 
-                    <div class="panel-body">
-                        <div class="form-group">
-                            <div class="col-md-11 control-label">
-                                <p class="help-block"><h11>*</h11> Campo Obrigatório </p>
-                            </div>
-                        </div>
+@{
+    ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_LayoutConvenio.cshtml";
+}
 
-                        <div class="form-group">
-                            <label class="col-md-2 control-label" for="Nome">Nome do Convenio <h11>*</h11></label>
-                            <div class="col-md-8">
-                                <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md"  type="text">
-                                <span asp-validation-for="Nome" class="text-danger"></span>
-                            </div>
-                        </div>
+<form asp-controller="Plano" asp-action="Create" method="post" class="form-horizontal">
+    <fieldset>
+        <div class="panel panel-primary">
+            <div class="panel-heading">Cadastro de Plano </div>
 
-                        <div class="form-group">
-                            <label class="col-md-2 control-label" for="Cadastrar"></label>
-                            <div class="col-md-8">
-                                <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Cadastrar</button>
-                                <button id="Cancelar" name="Cancelar" class="btn btn-danger"   type="Reset">Cancelar e Voltat</button>
-                            </div>
-                        </div>
+            <div class="panel-body">
+                <div class="form-group">
+                    <div class="col-md-11 control-label">
+                        <p class="help-block"><h11>*</h11> Campo Obrigatório </p>
                     </div>
                 </div>
-            </fieldset>
-        </form>
 
-      
- 
- 
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="Nome">Nome do Plano <h11>*</h11></label>
+                    <div class="col-md-8">
+                        <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md" type="text">
+                        <span asp-validation-for="Nome" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="Cadastrar"></label>
+                    <div class="col-md-8">
+                        <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Cadastrar</button>
+                        <a class="btn btn-info" asp-action="Index">Voltar Para a Lista</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </fieldset>
+</form>
+
+
+
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
