--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Edit.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <form asp-controller="Procedimento" asp-action="Edit" method="post" class="form-horizontal">
     <input type="hidden" asp-for="ProcedimentoID" />
-  
+    <input type="hidden" asp-for="Ativo" />
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <fieldset>
         <div class="panel panel-primary">
@@ -56,23 +56,7 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <label class="col-md-2 control-label" for="Ativo">Status <h11>*</h11></label>
-                    <div class="col-md-4">
-                        <div class="input-group">
-                            <span class="input-group-addon">
-                                <label class="radio-inline" for="radios-0">
-                                    <input type="radio" name="Ativo" asp-for="Ativo" value="0" />
-                                    Desativar
-                                </label>
-                                <label class="radio-inline" for="radios-1">
-                                    <input type="radio"   name="Ativo"  asp-for="Ativo" value="1" />
-                                    Ativo
-                                </label>
-                            </span>
-                        </div>
-                    </div>
-                </div>
+                 
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="Cadastrar"></label>
                     <div class="col-md-8">
