--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Shared/_LayoutProcedimentos.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Shared/_LayoutProcedimentos.cshtml
@@ -4,13 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Painel de Administração Portal Marketingplace Jenn</title>
-      <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
 
 
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-
+    <link rel="stylesheet" type="text/css" href="~/css/jquery-ui/jquery-ui.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/site.css" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="~/css/jquery-dataTables/jquery.dataTables.css" />
+    <link href="~/lib/bootstrap/atualizado/bootstrap.min.css" rel="stylesheet" />
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 
 
 </head>
@@ -26,7 +28,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Voltar</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Procedimento" asp-action="Index">Procedimento</a>
@@ -34,9 +36,6 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="TipoProcedimento" asp-action="Index">Tipos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="PlanoProcedimentoEmpresa" asp-action="Index">Plano/ Empresa</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="CategoriaProcedimento" asp-action="Index">Categoria</a>
@@ -61,10 +60,24 @@
         </div>
     </footer>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+    <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+
+
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="~/lib/jquery-mask/jquery.mask.js" asp-append-version="true"></script>
+    @*<script type="text/javascript" src="~/lib/bootstrap/dist/js/bootstrap.min.js" asp-append-version="true"></script>*@
+    <script type="text/javascript" src="~/lib/jquery-dataTables/jquery.dataTables.js" asp-append-version="true"></script>
+
+    @*<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>*@
+
+
+
+
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <script src="~/js/procedimento.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
