--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/ProcedimentoLista/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/ProcedimentoLista/Default.cshtml
@@ -2,7 +2,7 @@
 <div class="card card-exame">
     <div class="row">
         <div class="col-xl-3 col-md-6 col-12">
-            <img src="@Model.UrlImagem" alt="" width="400" height="150" style="bottom:initial" />
+            <img src="@Model.UrlImagem" alt="" style="bottom:initial" />
         </div>
         <div class="col-xl-6 col-md-6 col-12">
             <h3>@Model.NomeEmpresa <img src="~/img/icon-check.png" /> </h3>
@@ -31,8 +31,10 @@
                 </div>
                 <div class="content-info">
                     <h4>@Model.NomeUnidade</h4>
-                    <p>@Model.EnderecoCompleto <a href="@Model.UrlMaps" target="_blank">Mapa</a></p>
-                    <p>@Model.Cidade</p>
+                    <p>
+                        @Model.EnderecoCompleto <a href="@Model.UrlMaps" target="_blank">Mapa</a>
+                                    <br />    @Model.Cidade
+                                    </p>
                 </div>
             </div>
             <div class="btn-content">
