--- a/src/frontend/ui.portal.jenn/Views/Produtos/Lista.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Produtos/Lista.cshtml
@@ -4,6 +4,7 @@
 
 
     <h1>@ViewBag.Produto em @ViewBag.Localidade</h1>
+<input type="hidden" id="idProcedimento" value="@ViewBag.idProcedimento" />
 
 @foreach (var item in Model)
 {
